--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="/img/gato.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/gato.ico" type="image/x-icon">
   <!-- Bootstrap CSS-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/b5b7f00aae.js" crossorigin="anonymous">    </script>
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top"><a class="navbar-brand" href="#"><img class="d-inline-block align-top" src="/img/gato.ico" width="30" height="30" alt="" loading="lazy"> ChichoProyects</a>
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top"><a class="navbar-brand" href="#"><img class="d-inline-block align-top" src="img/gato.ico" width="30" height="30" alt="" loading="lazy"> ChichoProyects</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse float-rigth" id="navbarNav">
         <ul class="navbar-nav ml-auto">
