--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </div>
     </nav><br><br>
-    <div class="portada p-4">
+    <div class="portada p-4-custom">
       <div class="container">
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="rounded-circle my-4"><img src="img/logo.png" alt="alt"></div>
