falta dar funcionalidad y footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="rounded-circle my-4"><img src="img/logo.png" alt="alt"></div>
-          <h1 class="titulo_nombre my-4">Maximo Junior Apaza Chirhuana</h1>
+          <h1 class="titulo_nombre my-4 h2">Maximo Junior Apaza Chirhuana</h1>
           <h3 class="titulo_carrera my-2"><span class="typed"></span></h3>
           <h4 class="especialidades my-2 f-20">Laravel | Node JS</h4>
           <h4 class="especialidades my-2 f-20">React-JS | Boostrap | MySql | MongoDB | Git</h4><br>
