--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
       </button>
       <div class="collapse navbar-collapse float-right" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active"><a class="nav-link" href="#SobreMi">Sobre Mí </a></li>
+          <li class="nav-item active"><a class="nav-link" href="#Inicio">Inicio </a></li>
+          <li class="nav-item"><a class="nav-link" href="#SobreMi">Sobre Mí </a></li>
           <li class="nav-item"><a class="nav-link" href="#Proyectos">Proyectos</a></li>
           <li class="nav-item"><a class="nav-link" href="#Servicios">Servicios</a></li>
           <li class="nav-item"><a class="nav-link" href="#Contacto">Contacto</a></li>
         </ul>
       </div>
     </nav>
-    <div class="portada p-4 d-flex flex-column justify-content-center align-items-center">
+    <div class="portada p-4 d-flex flex-column justify-content-center align-items-center" id="Inicio">
       <div class="container">
-        <div class="d-flex flex-column justify-content-center align-items-center">
+        <div class="d-flex flex-column justify-content-center align-items-center" id="datos_principales">
           <div class="rounded-circle my-4"><img class="img-fluid rounded-circle img-avatar" src="https://avatars1.githubusercontent.com/u/53198604?s=460&amp;u=4a7fa08dbbf4a06d086cfc635c6ab19520b6d8e6&amp;v=4" alt="alt"></div>
           <h1 class="titulo_nombre my-2 h2">Maximo Junior Apaza Chirhuana</h1>
           <h3 class="titulo_carrera my-2"><span class="typed"></span></h3>
@@ -41,7 +42,7 @@
   </header>
   <main class="container my-4">
     <h2 class="text-center my-4 subtitulo" id="SobreMi">Sobre Mí</h2>
-    <div class="row">
+    <div class="row" id="algunas_palabras">
       <div class="col-md-6 p-3 d-flex flex-column justify-content-center align-items-center"><img class="img-fluid" src="img/sobremi.svg" alt="alt" loading="lazy"></div>
       <div class="col-md-6 p-3 text-justify">
         <h4 class="subtitulo-h4 my-2">Algunas Palabras...</h4>
@@ -54,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" id="breve_descripcion">
       <div class="col-md-6 p-3">
         <h4 class="subtitulo-h4 my-2 text-left">Una breve descripcion...</h4>
         <p>Soy un joven <b>muy responsable</b>, feliz e interesante de conocer. Mi mayor caracteristica es mi curiosidad por aprender cosas nuevas y eso me dado muchos beneficios.</p>
@@ -69,7 +70,7 @@
       </div>
     </div>
     <h2 class="text-center my-4 subtitulo"> Mis Habilidades</h2>
-    <div class="row">
+    <div class="row" id="mis_habilidades">
       <div class="col-md-6 p-3">
         <h4 class="subtitulo-h4 my-4">En lo mejor que me desempeño...</h4>
         <p>Javascript
@@ -188,7 +189,7 @@
       </div>
     </div>
   </section>
-  <section class="container my-4">
+  <section class="container my-4" id="contacto_m">
     <h2 class="text-center my-4 subtitulo" id="Contacto">Contacto</h2>
     <div class="row">
       <div class="col-md-6">
@@ -220,6 +221,7 @@
   </footer>
 </body>
 <script src="js/typed.js"></script>
+<script src="js/scrollreveal.min.js"></script>
 <script src="js/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="js/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
